<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/bienvenidoLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/abel"
        android:text="@string/title_Bienvenido"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/iniciaSesionLoginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/abel"
        android:text="@string/continuing"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenidoLoginTextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/iniciaSesionLoginTextView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correoLoginTextView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/abel"
            android:hint="correo"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/correoLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contraseñaLoginTextView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/abel"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contraseñaLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/olvidasteContraLoginTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/abel"
            android:text="@string/forgot"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/abel"
            android:text="@string/btnLogin">
        </com.google.android.material.button.MaterialButton>

        <TextView
            android:id="@+id/eresNuevoLoginTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/abel"
            android:text="@string/newUser"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>